examples/test/testpolicy10231.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10231
  namespace: namespace191
spec:
  podSelector:
    matchLabels:
      key30: value6
      key23: value21
      key33: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value41
          key44: value34
      podSelector:
        matchLabels:
          key29: value19
